--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/122/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/122/index.mdx
@@ -11,6 +11,8 @@ Salut à tous !
 
 Encore erreur, 220 => 120 + 121
 
+Next.js conf
+
 Three.js Journey TWIR: https://threejs-journey.com/join/TWIR (10/11/2022)
 
 <!-- truncate -->
@@ -43,61 +45,79 @@ Vous pouvez le [télécharger ici](https://sizzy.co/?utm_campaign=newsletter&utm
 
 ## ⚛️ React {#react}
 
-**[Next.js 13](https://nextjs.org/blog/next-13)**
+[![Next.js 13 keynote slide](/emails/issues/122/nextjs13.jpg)](https://nextjs.org/blog/next-13)
 
-https://nextjs.org/docs/basic-features/font-optimization
+**[Next.js 13 - Dynamic Without Limits](https://nextjs.org/blog/next-13)**
 
-https://twitter.com/wongmjane/status/1585976145035792389
+Cette nouvelle version de Next.js introduit le nouveau système de routing et de nested layouts en beta. La migration est incrémentale et optionnelle: il faudra déplacer vos pages Next.js dans un nouveau dossier `app/` pour utiliser les toutes dernières innovations, comme l'usage des React Server Components et du support streaming SSR sur les 2 runtimes Edge + Node.js.
 
-Next.js 13 introduces some major changes, with a big focus on beginning to reduce the amount of client JavaScript required to run Next.js apps. The biggest is the introduction of the app directory, which can include shared layouts, React Server Components for server-side component rendering, components that support streaming data and new data fetching capabilities.
+⚡️ Autres améliorations significatives:
 
-keynote: https://www.youtube.com/watch?v=NiknNI_0J48
+- Utilisation d'un nouveau bundler Rust Turbopack en alpha (détaillé plus bas).
+- next/image: nouveau composant image plus léger, flexible et rapide, qui évite les layouts shifts
+- @next/font: pour self-hoster ses fonts de manière optimisée et éviter les layout shifts (voir aussi [Fontaine](https://twitter.com/danielcroe/status/1586472544491950080) présenté la semaine dernière)
 
-- Matt Kane  [![🐦](https://fonts.gstatic.com/s/e/notoemoji/14.0/1f426/72.png) ponders the deep connection](https://react.statuscode.com/link/130768/519c7901dc) between React and Next.js: *"React is getting inextricably linked to Next.js."*
+💬 Commentaires:
 
-Next.js Conf 22 is taking place this week and Vercel’s big news all hangs off of the release of Next.js 13 which includes:
+- [Dan Abramov](https://twitter.com/dan_abramov/status/1585076899126345728) est excité par cette release qui donne une implémentation concrète à l'architecture cible visée par React.
+- La phrase ["Next.js 13 is the real React 18 release"](https://twitter.com/acdlite/status/1585029529361612801) fait polémique, et Andrew s'explique.
+- [Matt Kane](https://twitter.com/ascorbic/status/1585004156615479296) pense que React est trop lié à Next.js
+- [Zach Leatherman](https://twitter.com/zachleat/status/1584995586918731776) mentionne que le Hello World de Next.js 13 envoie beaucoup trop de JavaScript.
 
-Support for an app/ directory to improve routing and layouts – can coexist with existing approaches, so no rapid migration needed.
-Support for React's new Server Components architecture in app/
-A new image component with on-demand optimization and the ability to display images without layout shift.
-A brand new font system.
-An Open Graph (OG) image generation library.
-.. and something that deserves its own item – next!
+🔗 Liens utiles:
 
-https://twitter.com/dan_abramov/status/1585076899126345728
+- 🎥 [Keynote Next.js Conf](https://www.youtube.com/watch?v=NiknNI_0J48)
+- 🎥 [Fireship - Next.js 13… this changes everything](https://www.youtube.com/watch?v=_w0Ikk4JY7U)
+- 🧵 [Next.js Upgrade Guide - Visual thread](https://twitter.com/shadcn/status/1584971527820541953)
 
-https://twitter.com/shadcn/status/1584971527820541953
+---
 
-https://twitter.com/ebey_jacob/status/1585273660956286980
-
-https://twitter.com/devongovett/status/1585463496354865153
-
-https://twitter.com/devongovett/status/1585035737971724288
-
-Fireship https://www.youtube.com/watch?v=_w0Ikk4JY7U
-
-https://twitter.com/pacocoursey/status/1585127915838386176
-
-https://twitter.com/zachleat/status/1584995586918731776
-
-https://twitter.com/pacocoursey/status/1585127915838386176
-
-https://www.youtube.com/watch?v=6mQ3M1CUGnk
+[![Turbopack keynote slide](/emails/issues/122/turbopack.jpg)](https://vercel.com/blog/turbopack)
 
 **[Introducing Turbopack: Rust-based successor to Webpack](https://vercel.com/blog/turbopack)**
 
-Turbopack is a new bundler written entirely in Rust that Vercel claims is 700x faster than Webpack and 20x faster than Vite. Currently it supports specifically Next.js, but support for Svelte and other frameworks is on the roadmap. In addition, support for Sass and Tailwind are both forthcoming.
+Vercel a embauché Tobias Koppers (créateur de Webpack), pour travailler sur Turbopack, un nouveau bundler très rapide en Rust. Pour l'instant, l'outil est en alpha, supporte principalement Next.js, et ses features sont limitées. Le support d'autres frameworks (Svelte, Vue..) et features (Tailwind...) sera ajouté progressivement.
 
-A variety of new tools like Vite have appeared boasting improved performance over Webpack, but Vercel is turning up the heat with a Rust-based Webpack ‘successor’ (it shares a creator) and you can try out an alpha today from Next.js 13 (above).
+Turbopack est optimisé pour la developer experience, et Vercel annonce que l'outil est 700x plus rapide que Webpack, et 20x plus rapide que Vite. Il repose sur Turbo, un framework de mémoisation en Rust qui est capable de cacher le résultat de chaque fonction. Vercel a aussi publié un [article](https://turbo.build/blog/turbopack-benchmarks) avec des benchmarks plus détaillés.
 
-https://twitter.com/youyuxi/status/1585040261922820096
+💬 Commentaires:
 
-https://twitter.com/jaredpalmer/status/1584971637694222336
+- [Jared Palmer](https://twitter.com/jaredpalmer/status/1584971637694222336) explique comment le cache fonctionne et que Turborepo/Turbopack pourraient fusionner.
+- [Evan You](https://twitter.com/youyuxi/status/1585040261922820096) commente et créé une page [Is Turbopack really 10x Faster than Vite?](https://github.com/yyx990803/vite-vs-next-turbo-hmr/discussions/8). Vite n'utilise pas SWC par défaut, et les benchmarks publiés reposent sur l'usage de Babel. Vite pourrait remplacer esbuild/Rollup par Turbopack.
+- [Sebastian McKenzie](https://twitter.com/sebmck/status/1584971938786861056) (Babel/Rome) pointe le gain relativement faible de performance sur un cold start (x4).
+- [Devon Govett](https://twitter.com/devongovett/status/1585035737971724288) mentionne que l'architecture est similaire à Parcel.
+- [Amjad Masad](https://twitter.com/amasad/status/1585001646782033921) mentionne que le bundler React-Native Metro utilise un système de cache similaire depuis très longtemps.
 
-https://twitter.com/cramforce/status/1584959388116471808
+---
 
-[Three.js Journey is going React](https://twitter.com/bruno_simon/status/1585222892769497089)
+**[Remix Joins Shopify to Push the Web Forward](https://shopify.engineering/remix-joins-shopify)**
 
+Remix vient de rejoindre Shopify, et sera utilisé dans leur meta-framework Hydrogen ainsi que d'autres projets. La version 2.0 d'Hydrogen remplacera l'usage des React Server Components par les APIs de Remix! Ils ont trouvé le modèle Remix plus simple à comprendre et plus performant que les Server Components.
+
+Pour moi, c'est une belle acquisition qui a du sens. Shopify peut se concentrer sur la proposition de valeur d'Hydrogen plutôt que sur des problématiques d'infrastructure, et bénéficie du progressive enhancement de Remix (particulièrement important pour le e-commerce). Sans compter que Remix est découplé de React, et Shopify travaille sur une librairie agnostique [Hydrogen UI](https://github.com/Shopify/hydrogen-ui): Shopify devrait pouvoir toucher les développeurs de divers frameworks (Vue, Svelte...), sans avoir à imposer React, tout en reposant sur une infrastructure partagée.
+
+💬 Commentaires pertinents:
+
+- [Josh Larson](https://twitter.com/jplhomer/status/1587095536833859584) a travaillé sur Hydrogen v1, liste les challenges rencontrés, et ne remet pas en question les bénéfices des React Server Components qui sont mieux implémentés dans Next.js 13 que Hydrogen v1.
+- [Ryan Florence](https://twitter.com/ryanflorence/status/1587171069915385856) mentionne que Shopify ne mise pas contre les Server Components, et qu'ils seront surement ré-introduits dans Remix plus tard.
+- [Ryan Florence](https://twitter.com/ryanflorence/status/1587090973594558464) explique que cette acquisition permettra de se concentrer pleinement sur le produit.
+- [Guillermo Rauch](https://twitter.com/rauchg/status/1587104330053664768) dit qu'un frontend devrait être découplé d'un backend headless. [Anthony Frehner](https://twitter.com/frehner_a/status/1587107928099651586) répond que le support Next.js devrait arriver dans Hydrogen UI.
+
+🔗 Liens:
+
+- 📜 [La roadmap Hydrogen](https://hydrogen.shopify.dev/roadmap/) a été mise à jour et donne de nombreux détails plus techniques.
+- 📜 [Remixing Shopify](https://remix.run/blog/remixing-shopify): l'annonce coté Remix, qui restera un framework open-source React indépendant découplé des usages e-commerce.
+- 🎥 [Fireship - When your JavaScript framework gets acquired](https://www.youtube.com/watch?v=HleppfVh8jc)
+
+---
+
+**[Three.js Journey is going React](https://twitter.com/bruno_simon/status/1585222892769497089)**
+
+[Optimization techniques for Rive animations in React apps](https://pixelpoint.io/blog/rive-react-optimizations/)
+
+- [Gatsby 5](https://twitter.com/GatsbyJS/status/1587136776828772353): devrait sortir aujourd'hui
+- [Deploy Next.js 13 on Netlify Today](https://www.netlify.com/blog/deploy-nextjs-13/)
+- [Docusaurus 2.2](https://twitter.com/docusaurus/status/1586347397667495936)
 - [RFC: React: Allow anything to be rendered by function components](https://github.com/DefinitelyTyped/DefinitelyTyped/pull/62876)
 - [Asta](https://github.com/yisar/asta): Resumable SSR framework.
 - [Two JavaScripts](https://remysharp.com/2022/10/13/two-javascripts)
@@ -136,13 +156,24 @@ N'hésitez pas à aller voir notre site [premieroctet.com](https://www.premieroc
 
 ## 📱 React-Native {#react-native}
 
-- [Andrew Clark: "I would love to see Expo adopt Server Components one day. We should really have Server Components for React-Native..."](https://twitter.com/Baconbrix/status/1585058874864062466)
+**[Expo SDK 47 beta is now available](https://blog.expo.dev/expo-sdk-47-beta-is-now-available-fa760eea1908)**
+
+https://twitter.com/expo/status/1587140697341456384
+
+https://twitter.com/Baconbrix/status/1587303631602307076
+
+- https://twitter.com/o_kwasniewski/status/1585270027942502404
+- [Andrew Clark: "I would love to see Expo adopt Server Components one day. We should really have Server Components for React-Native..."](https://twitter.com/Baconbrix/status/1585058874864062466) + https://twitter.com/sebastienlorber/status/1470810351197433863
 - [Wix Engineering - Now An Official React Native Partner](https://www.wix.engineering/post/wix-engineering-now-an-official-react-native-partner)
 - [The React Native Show #17 - React Native New Architecture](https://www.callstack.com/podcasts/react-native-new-architecture-ep-17)
 - [The React Native Show Podcast: Coffee Talk #6 - Webpack & Callstack experts’ take on Next.js Conf](https://www.callstack.com/podcasts/webpack-callstack-experts-take-on-next-js-conf-coffee-talk-6)
+- [RNR 250 - React Native Firebase: TL;DR](https://reactnativeradio.com/episodes/rnr-250-react-native-firebase-tl-dr)
 - [React-Native-Gesture-Handler 2.8](https://github.com/software-mansion/react-native-gesture-handler/releases/tag/2.8.0)
 - [The React Native Community Map](https://lifeiswhat.notion.site/The-React-Native-Community-Map-07f3221c294d4c8ab65a13cf1dee6901)
 - [react-native-fast-shadow](https://github.com/alan-eu/react-native-fast-shadow)
+- [Stripe Identity: ID Authentication Made Simple](https://www.callstack.com/blog/stripe-identity-id-authentication-made-simple)
+- [React Native - Guide to Integration with Existing Apps - Android](https://michalchudziak.dev/blog/integration-with-existing-apps-android)
+- [React Native - Guide to Integration with Existing Apps - iOS](https://michalchudziak.dev/blog/integration-with-existing-apps-ios)
 
 ---
 
@@ -170,6 +201,7 @@ Masteos réinvente l’expérience de l’investissement locatif, en proposant u
 ## 🇫🇷 En français {#fr}
 
 - [La résumabilité & le nouveau framework Qwik](https://www.youtube.com/watch?v=urq-fl4DDAI)
+- [Formatter une date/heure selon les usages locaux](https://delicious-insights.com/fr/articles/js-protip-formater-dates/)
 
 💡Tu peux m'envoyer ton contenu: [sebastien@thisweekinreact.com](mailto:sebastien@thisweekinreact.com?subject=Contenu%20en%20fran%C3%A7ais) !
 
@@ -177,11 +209,15 @@ Masteos réinvente l’expérience de l’investissement locatif, en proposant u
 
 ## 🔀 Autre {#other}
 
+- [Babel 7.20](https://babeljs.io/blog/2022/10/27/7.20.0): support de TS 4.9 `satisfies`!
 - [Node v18.12.0 (LTS)](https://nodejs.org/en/blog/release/v18.12.0/): premiere release LTS v18.
 - [npm v9.0.0](https://github.blog/changelog/2022-10-24-npm-v9-0-0-released/)
-- [stc - Speedy TypeScript type checker](https://github.com/dudykr/stc)
+- [stc - Speedy TypeScript type checker](https://github.com/dudykr/stc) + [Open-sourcing the new TypeScript type checker](https://kdy1.dev/posts/2022/10/open-sourcing-stc)
 - [Vercel acquires Splitbee to expand first-party analytics](https://vercel.com/blog/vercel-acquires-splitbee)
 - [Deno 1.27: Major IDE Improvements](https://deno.com/blog/v1.27)
+- [Chrome 108 beta](https://developer.chrome.com/blog/chrome-108-beta/)
+- [Vite 3.2](https://twitter.com/vite_js/status/1585261680841424897)
+- [Experimental Dev Server Persistent Caching for Vite](https://twitter.com/Akryum/status/1585769403781505024)
 
 ---
 
@@ -196,5 +232,9 @@ https://twitter.com/deno_land/status/1586032184019648512
 https://twitter.com/b_e_n_t_e_n/status/1586197827126177792
 
 https://twitter.com/Rich_Harris/status/1584945971162533891
+
+https://twitter.com/manucorporat/status/1585269014166650882
+
+https://twitter.com/WickyNilliams/status/1585003895117742080
 
 [![](/emails/issues/121/meme.png)](https://todo)
