--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/122/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/122/index.mdx
@@ -60,9 +60,9 @@ Cette nouvelle version de Next.js introduit le nouveau système de routing et de
 💬 Commentaires:
 
 - [Dan Abramov](https://twitter.com/dan_abramov/status/1585076899126345728) est excité par cette release qui donne une implémentation concrète à l'architecture cible visée par React.
-- La phrase ["Next.js 13 is the real React 18 release"](https://twitter.com/acdlite/status/1585029529361612801) fait polémique, et Andrew s'explique.
+- [Andrew Clark](https://twitter.com/acdlite/status/1585029529361612801) explique sa phrase "Next.js 13 is the real React 18 release" qui fait polémique
 - [Matt Kane](https://twitter.com/ascorbic/status/1585004156615479296) pense que React est trop lié à Next.js
-- [Zach Leatherman](https://twitter.com/zachleat/status/1584995586918731776) mentionne que le Hello World de Next.js 13 envoie beaucoup trop de JavaScript.
+- [Zach Leatherman](https://twitter.com/zachleat/status/1584995586918731776) mentionne que le Hello World de Next.js 13 envoie toujours beaucoup trop de JavaScript.
 
 🔗 Liens utiles:
 
@@ -84,7 +84,7 @@ Turbopack est optimisé pour la developer experience, et Vercel annonce que l'ou
 
 - [Jared Palmer](https://twitter.com/jaredpalmer/status/1584971637694222336) explique comment le cache fonctionne et que Turborepo/Turbopack pourraient fusionner.
 - [Evan You](https://twitter.com/youyuxi/status/1585040261922820096) commente et créé une page [Is Turbopack really 10x Faster than Vite?](https://github.com/yyx990803/vite-vs-next-turbo-hmr/discussions/8). Vite n'utilise pas SWC par défaut, et les benchmarks publiés reposent sur l'usage de Babel. Vite pourrait remplacer esbuild/Rollup par Turbopack.
-- [Sebastian McKenzie](https://twitter.com/sebmck/status/1584971938786861056) pointe le gain relativement faible de performance sur un cold start (x4).
+- [Sebastian McKenzie](https://twitter.com/sebmck/status/1584971938786861056) pointe du doigt le gain relativement faible de performance sur un cold start (x4).
 - [Devon Govett](https://twitter.com/devongovett/status/1585035737971724288) mentionne que l'architecture est similaire à Parcel.
 - [Amjad Masad](https://twitter.com/amasad/status/1585001646782033921) mentionne que le bundler React-Native Metro utilise un système de cache similaire depuis très longtemps.
 
@@ -119,7 +119,7 @@ Pour moi, c'est une belle acquisition qui a du sens. Shopify peut se concentrer 
 
 Three.js Journey est le cours de référence pour apprendre à créer des scenes 3D sur le web avec Three.js. Bruno Simon vient tout juste de sortir 24h de vidéos supplémentaires basées sur [React-Three-Fiber](https://github.com/pmndrs/react-three-fiber) qui apporte un modèle déclaratif à Three.js. La 3D est en train de prendre de l'ampleur dans nos applications: c'est le bon moment pour s'y mettre si vous voulez savoir faire autre chose que des formulaires et des applications de gestion. J'ai moi même commencé à apprendre avec ce cours en début d'année (cf mon repo [react-three-fiber-journey](https://github.com/slorber/react-three-fiber-journey)) et je ne regrette pas du tout!
 
-Bruno m'a offert un code promo [TWIR](https://threejs-journey.com/join/TWIR) de -30% pour vous le proposer au tarif attractif de 66$ pendant les 10 prochains jours. Je précise que ce n'est pas du contenu sponsorisé, et je ne gagne rien sur les ventes: je trouve ce cours super cool, et cette mise à jour le rend encore plus pertinent pour un dev React.
+Bruno m'a offert un code promo ["TWIR"](https://threejs-journey.com/join/TWIR) de -30% pour vous le proposer au tarif attractif de 66$ pendant les 10 prochains jours. Je précise que ce n'est pas du contenu sponsorisé, et je ne gagne rien sur les ventes: je trouve ce cours super cool, et cette mise à jour le rend encore plus pertinent pour un dev React.
 
 Pour info, je compte créer une page "deals" pour les lecteurs de ma newsletter avec d'autres cours de ce genre et des promos intéressantes (sur lesquelles je ne gagne rien du tout).
 
@@ -130,17 +130,16 @@ Pour info, je compte créer une page "deals" pour les lecteurs de ma newsletter 
 - 📜 [Full Stack Components](https://www.epicweb.dev/full-stack-components)
 - 📜 [Deploy Next.js 13 on Netlify Today](https://www.netlify.com/blog/deploy-nextjs-13/)
 - 📜 [Optimization techniques for Rive animations in React apps](https://pixelpoint.io/blog/rive-react-optimizations/)
-- 📜 [Two JavaScripts](https://remysharp.com/2022/10/13/two-javascripts)
 - 📜 [Code coverage with Storybook test runner](https://storybook.js.org/blog/code-coverage-with-the-storybook-test-runner/)
 - 📜 [The Gatsby Slice API: High Precision Incremental Builds](https://www.gatsbyjs.com/blog/gatsby-slice-api/)
 - 📜 [How We Improved React Loading Times by 70% with Next.js](https://www.causal.app/blog/next-js)
 - 📜 [Seeding the Query Cache](https://tkdodo.eu/blog/seeding-the-query-cache)
-- 📜 [How to Build a Blog with Fresh](https://deno.com/blog/build-a-blog-with-fresh)
+- 📜 [How to Build a Blog with Fresh](https://deno.com/blog/build-a-blog-with-fresh): le framework Preact basé sur Deno
+- 📦 [Asta](https://github.com/yisar/asta): nouveau resumable SSR framework, inspiré de Qwik et Marko, avec une syntaxe React-like. A suivre!
 - 📦 [Gatsby 5](https://twitter.com/GatsbyJS/status/1587136776828772353): devrait sortir aujourd'hui
 - 📦 [TanStack Query 4.14](https://twitter.com/TkDodo/status/1587411685517697028): nouveau plugin ESLint
 - 📦 [Remix Forms 1.0](https://twitter.com/danielweinmann/status/1587465389990084609)
 - 📦 [Docusaurus 2.2](https://twitter.com/docusaurus/status/1586347397667495936): support des diagrammes Mermaid
-- 📦 [Asta](https://github.com/yisar/asta): Resumable SSR framework.
 - 📦 [Downshift 7.0](https://github.com/downshift-js/downshift/releases/tag/v7.0.0)
 
 <SubscribeFormEmbed />
@@ -169,24 +168,34 @@ N'hésitez pas à aller voir notre site [premieroctet.com](https://www.premieroc
 
 ## 📱 React-Native {#react-native}
 
+[![Expo SDK 47 beta is now available](/emails/issues/122/expo47.jpg)](https://blog.expo.dev/expo-sdk-47-beta-is-now-available-fa760eea1908)
+
 **[Expo SDK 47 beta is now available](https://blog.expo.dev/expo-sdk-47-beta-is-now-available-fa760eea1908)**
 
-https://twitter.com/expo/status/1587140697341456384
+Le nouveau SDK Expo est disponible en beta pendant une semaine.
 
-https://twitter.com/Baconbrix/status/1587303631602307076
+- React-Native 0.70.4 et React 18.1
+- Hermes disponible dans Expo Go sur iOS. Hermes sera le moteur JS par défaut à partir du SDK 48.
+- Support Fabric dans de nombreux modules Expo
+- Expo Modules API 1.0 qui permet de faciliter la création de modules natifs Fabric en Swift/Kotlin
+- Le filesystem routing pour React-Navigation en beta. La dernière release [v0.0.34](https://twitter.com/Baconbrix/status/1587303631602307076) est compatible avec le SDK 47.
 
-- https://twitter.com/o_kwasniewski/status/1585270027942502404
-- [Andrew Clark: "I would love to see Expo adopt Server Components one day. We should really have Server Components for React-Native..."](https://twitter.com/Baconbrix/status/1585058874864062466) + https://twitter.com/sebastienlorber/status/1470810351197433863
-- [Wix Engineering - Now An Official React Native Partner](https://www.wix.engineering/post/wix-engineering-now-an-official-react-native-partner)
-- [The React Native Show #17 - React Native New Architecture](https://www.callstack.com/podcasts/react-native-new-architecture-ep-17)
-- [The React Native Show Podcast: Coffee Talk #6 - Webpack & Callstack experts’ take on Next.js Conf](https://www.callstack.com/podcasts/webpack-callstack-experts-take-on-next-js-conf-coffee-talk-6)
-- [RNR 250 - React Native Firebase: TL;DR](https://reactnativeradio.com/episodes/rnr-250-react-native-firebase-tl-dr)
-- [React-Native-Gesture-Handler 2.8](https://github.com/software-mansion/react-native-gesture-handler/releases/tag/2.8.0)
-- [The React Native Community Map](https://lifeiswhat.notion.site/The-React-Native-Community-Map-07f3221c294d4c8ab65a13cf1dee6901)
-- [react-native-fast-shadow](https://github.com/alan-eu/react-native-fast-shadow)
-- [Stripe Identity: ID Authentication Made Simple](https://www.callstack.com/blog/stripe-identity-id-authentication-made-simple)
-- [React Native - Guide to Integration with Existing Apps - Android](https://michalchudziak.dev/blog/integration-with-existing-apps-android)
-- [React Native - Guide to Integration with Existing Apps - iOS](https://michalchudziak.dev/blog/integration-with-existing-apps-ios)
+On aura plus de détails sur les highlights la semaine prochaine, mais c'est clairement une grosse release de très belles nouveautés!
+
+---
+
+- 💡 [Andrew Clark: "I would love to see Expo adopt Server Components one day. We should really have Server Components for React-Native..."](https://twitter.com/Baconbrix/status/1585058874864062466): si vous me lisez depuis longtemps, vous avez déjà pu voir que l'usage de Server Components sur React-Native m'intéresse particulièrement [depuis un moment](https://twitter.com/sebastienlorber/status/1470810351197433863). Je pense d'ailleurs écrire un article dédié au sujet.
+- 📦 [React-Native-Gesture-Handler 2.8](https://github.com/software-mansion/react-native-gesture-handler/releases/tag/2.8.0)
+- 📦 [React-Native-Fast-Shadow](https://github.com/alan-eu/react-native-fast-shadow)
+- 🐦 [React-Native Android improves build speed + `--active-arch-only` flag](https://twitter.com/o_kwasniewski/status/1585270027942502404)
+- 📜 [Stripe Identity: ID Authentication Made Simple](https://www.callstack.com/blog/stripe-identity-id-authentication-made-simple)
+- 📜 [React Native - Guide to Integration with Existing Apps - Android](https://michalchudziak.dev/blog/integration-with-existing-apps-android)
+- 📜 [React Native - Guide to Integration with Existing Apps - iOS](https://michalchudziak.dev/blog/integration-with-existing-apps-ios)
+- 🎙️ [The React Native Show #17 - React Native New Architecture](https://www.callstack.com/podcasts/react-native-new-architecture-ep-17)
+- 🎙️ [The React Native Show Podcast: Coffee Talk #6 - Webpack & Callstack experts’ take on Next.js Conf](https://www.callstack.com/podcasts/webpack-callstack-experts-take-on-next-js-conf-coffee-talk-6)
+- 🎙️ [RNR 250 - React Native Firebase](https://reactnativeradio.com/episodes/rnr-250-react-native-firebase-tl-dr)
+- 🔗 [The React Native Community Map](https://lifeiswhat.notion.site/The-React-Native-Community-Map-07f3221c294d4c8ab65a13cf1dee6901)
+- 🗣 [Wix Engineering - Now An Official React Native Partner](https://www.wix.engineering/post/wix-engineering-now-an-official-react-native-partner)
 
 ---
 
@@ -224,13 +233,14 @@ Masteos réinvente l’expérience de l’investissement locatif, en proposant u
 
 - [Babel 7.20](https://babeljs.io/blog/2022/10/27/7.20.0): support de TS 4.9 `satisfies`!
 - [Node v18.12.0 (LTS)](https://nodejs.org/en/blog/release/v18.12.0/): premiere release LTS v18.
+- [Open-sourcing the new TypeScript type checker](https://kdy1.dev/posts/2022/10/open-sourcing-stc): l'auteur de swc open-source son type-checker qui sera finalement écrit en Rust
 - [npm v9.0.0](https://github.blog/changelog/2022-10-24-npm-v9-0-0-released/)
-- [stc - Speedy TypeScript type checker](https://github.com/dudykr/stc) + [Open-sourcing the new TypeScript type checker](https://kdy1.dev/posts/2022/10/open-sourcing-stc)
 - [Vercel acquires Splitbee to expand first-party analytics](https://vercel.com/blog/vercel-acquires-splitbee)
 - [Deno 1.27: Major IDE Improvements](https://deno.com/blog/v1.27)
 - [Chrome 108 beta](https://developer.chrome.com/blog/chrome-108-beta/)
 - [Vite 3.2](https://twitter.com/vite_js/status/1585261680841424897)
 - [Experimental Dev Server Persistent Caching for Vite](https://twitter.com/Akryum/status/1585769403781505024)
+- [Two JavaScripts](https://remysharp.com/2022/10/13/two-javascripts)
 
 ---
 
