--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/122/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/122/index.mdx
@@ -17,7 +17,7 @@ Quelle belle semaine pleine de rebondissements! Il y en a de tous les cotés:
 - Gatsby va sortir sa v5 et rendre son data-layer agnostic
 - Le SDK 47 d'Expo est prometteur
 
-Ne manquez pas non plus la grosse mise à jour du cours Three.js Journey avec support React-Three-Fiber, pour lequel Bruno m'a partagé un code promo ["TWIR"](https://threejs-journey.com/join/TWIR). Cela sera le 1er cours qui figurera sur une prochaine page "deals" pour les lecteurs de la newsletter.
+Ne manquez pas non plus la grosse mise à jour du cours Three.js Journey avec les modules React-Three-Fiber, pour lequel Bruno m'a partagé un code promo ["TWIR"](https://threejs-journey.com/join/TWIR). Cela sera le 1er cours qui figurera sur une prochaine page "deals" pour les lecteurs de la newsletter.
 
 <!-- truncate -->
 
