--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/122/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/122/index.mdx
@@ -17,7 +17,9 @@ Quelle belle semaine pleine de rebondissements! Il y en a de tous les cotés:
 - Gatsby va sortir sa v5 et rendre son data-layer agnostic
 - Le SDK 47 d'Expo est prometteur
 
-Ne manquez pas non plus la grosse mise à jour du cours Three.js Journey avec les modules React-Three-Fiber, pour lequel Bruno m'a partagé un code promo ["TWIR"](https://threejs-journey.com/join/TWIR). Cela sera le 1er cours qui figurera sur une prochaine page "deals" pour les lecteurs de la newsletter.
+J'ai été invité par le podcast Double Slash (🇫🇷) pour parler de [Docusaurus et de cette newsletter](https://double-slash.dev/podcasts/docusaurus/). D'ailleurs si vous avez des questions, n'hésitez pas ;)
+
+Ne manquez pas non plus la grosse mise à jour du cours Three.js Journey avec les modules React-Three-Fiber. Bruno m'a partagé un code promo ["TWIR"](https://threejs-journey.com/join/TWIR) pour le lancement. Cela sera le 1er cours à figurer sur une prochaine page "deals" que je vais créer.
 
 <!-- truncate -->
 
@@ -225,10 +227,8 @@ Masteos réinvente l’expérience de l’investissement locatif, en proposant u
 
 ## 🇫🇷 En français {#fr}
 
-<Todo />
-
-https://www.youtube.com/channel/UC5HDIVwuqoIuKKw-WbQ4CvA/videos
-
+- 🎙️ [Docusaurus et React Hebdo](https://double-slash.dev/podcasts/docusaurus/): je suis l'invité du podcast Double Slash
+- 🎥 [Découverte de NextJS 13 avec une petite app](https://www.youtube.com/watch?v=epsxvZbdFR0)
 - 🎥 [La résumabilité & le nouveau framework Qwik](https://www.youtube.com/watch?v=urq-fl4DDAI)
 - 📜 [Formatter une date/heure selon les usages locaux](https://delicious-insights.com/fr/articles/js-protip-formater-dates/)
 
@@ -239,6 +239,7 @@ https://www.youtube.com/channel/UC5HDIVwuqoIuKKw-WbQ4CvA/videos
 ## 🔀 Autre {#other}
 
 - [Babel 7.20](https://babeljs.io/blog/2022/10/27/7.20.0): Deno target et support de TS 4.9 `satisfies`!
+- [Announcing TypeScript 4.9 RC](https://devblogs.microsoft.com/typescript/announcing-typescript-4-9-rc/): avec `satisfies`!
 - [Node v18.12.0 (LTS)](https://nodejs.org/en/blog/release/v18.12.0/): premiere release LTS v18.
 - [Open-sourcing the new TypeScript type checker](https://kdy1.dev/posts/2022/10/open-sourcing-stc): l'auteur de swc open-source son type-checker qui sera finalement écrit en Rust
 - [npm v9.0.0](https://github.blog/changelog/2022-10-24-npm-v9-0-0-released/)
